--- a/index.html
+++ b/index.html
@@ -6,139 +6,130 @@
 <title>🎂 Chúc Mừng Sinh Nhật Nguyễn Thị Kim Ngân 🎉</title>
 
 <style>
-* { box-sizing: border-box; }
-body {
-  touch-action: pan-y;
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background: radial-gradient(circle at top, #ffd6e8, #fff8e6);
-  overflow: hidden;
-}
+  * { box-sizing: border-box; }
+  body {
+    touch-action: pan-y;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(circle at top, #ffd6e8, #fff8e6);
+    overflow: hidden;
+  }
 
-.page {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: 1s ease;
-  padding: 15px;
-  text-align: center;
-  transform: translateY(20px);
-}
+  .page {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 1s ease;
+    padding: 15px;
+    text-align: center;
+    transform: translateY(20px);
+  }
 
-.page.active {
-  opacity: 1;
-  transform: translateY(0);
-  z-index: 2;
-}
+  .page.active {
+    opacity: 1;
+    transform: translateY(0);
+    z-index: 2;
+  }
 
-/* Ảnh tối ưu mobile */
-img {
-  width: 100%;
-  max-width: 320px;
-  height: auto;
-  border-radius: 22px;
-  box-shadow: 0 5px 22px rgba(0,0,0,0.15);
-  margin: 20px 0;
-  display: block;
-}
+  img {
+    width: 100%;
+    max-width: 320px;
+    height: auto;
+    border-radius: 22px;
+    box-shadow: 0 5px 22px rgba(0,0,0,0.15);
+    margin: 20px 0;
+    display: block;
+  }
 
-/* Slide 2 và 3 */
-#page2 img { max-height: 240px; object-fit: cover; }
-#page3 img { max-height: 220px; object-fit: cover; }
+  #page2 img { max-height: 240px; object-fit: cover; }
+  #page3 img { max-height: 220px; object-fit: cover; }
 
-.cake {
-  font-size: 4em;
-  animation: float 3s ease-in-out infinite;
-}
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-12px); }
-}
+  .cake {
+    font-size: 4em;
+    animation: float 3s ease-in-out infinite;
+  }
+  @keyframes float {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-12px); }
+  }
 
-h1 {
-  color: #ff2e9b;
-  font-size: 1.9em;
-  margin-top: 10px;
-  text-shadow: 0 0 15px #ff8ecf;
-}
+  h1 {
+    color: #ff2e9b;
+    font-size: 1.9em;
+    margin-top: 10px;
+    text-shadow: 0 0 15px #ff8ecf;
+  }
 
-p {
-  color: #444;
-  font-size: 1.1em;
-  line-height: 1.7;
-}
+  p {
+    color: #444;
+    font-size: 1.1em;
+    line-height: 1.7;
+  }
 
-/* Firework */
-.firework {
-  position: fixed;
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  pointer-events: none;
-  animation: explode 1s ease-out forwards;
-}
-@keyframes explode {
-  from { transform: scale(1); opacity: 1; }
-  to { transform: scale(3); opacity: 0; }
-}
+  .firework {
+    position: fixed;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    pointer-events: none;
+    animation: explode 1s ease-out forwards;
+  }
+  @keyframes explode {
+    from { transform: scale(1); opacity: 1; }
+    to { transform: scale(3); opacity: 0; }
+  }
 
-/* Hearts */
-.hearts {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  pointer-events: none;
-  overflow: hidden;
-  z-index: 5;
-}
-.heart {
-  position: absolute;
-  bottom: -20px;
-  font-size: 18px;
-  opacity: 0.7;
-  animation: floatUp 4s linear infinite;
-}
-@keyframes floatUp {
-  0% { transform: translateY(0) scale(1); opacity: 0.8; }
-  50% { opacity: 1; }
-  100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
-}
+  .hearts {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: 5;
+  }
+  .heart {
+    position: absolute;
+    bottom: -20px;
+    font-size: 18px;
+    opacity: 0.7;
+    animation: floatUp 4s linear infinite;
+  }
+  @keyframes floatUp {
+    0% { transform: translateY(0) scale(1); opacity: 0.8; }
+    50% { opacity: 1; }
+    100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
+  }
 
-/* Nút bí mật */
-#secretBox {
-  margin-top: 20px;
-  cursor: pointer;
-  font-size: 1.2em;
-  color:#ff2e9b;
-  text-decoration: underline;
-}
+  /* Nút Bí Mật */
+  #secretBox {
+    margin-top: 20px;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: #ff2e9b;
+    text-decoration: underline;
+  }
 
-#secretImage {
-  display:none;
-  margin-top:15px;
-  text-align:center;
-}
-#secretImage img {
-  max-width:300px;
-  border-radius:20px;
-  box-shadow:0 4px 15px rgba(0,0,0,0.2);
-}
-#secretImage p {
-  font-size:1.1em;
-  color:#ff2e9b;
-  margin-bottom:10px;
-}
+  #secretImage {
+    display: none;
+    margin-top: 15px;
+    text-align: center;
+  }
+  #secretImage img {
+    max-width: 300px;
+    border-radius: 20px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+  }
 </style>
 </head>
 
 <body>
 
-<!-- Yêu cầu mật khẩu khi mở trang -->
+<!-- YÊU CẦU MẬT KHẨU TRƯỚC KHI VÀO WEBSITE -->
 <script>
 window.onload = function() {
   let pw = prompt("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
@@ -154,13 +145,6 @@ window.onload = function() {
   <div class="cake">🎂💖</div>
   <h1>Chúc Mừng Sinh Nhật<br>Nguyễn Thị Kim Ngân 🎉</h1>
   <img src="z7141954347992_01fc0112130cdebda054ebd0d8491e7b.jpg" alt="Birthday">
-
-  <!-- Thanh bí mật cuối trang 1 -->
-  <div id="secretBox">🔒 Nhấn để xem bí mật</div>
-  <div id="secretImage">
-    <p>💖 Đây là bí mật dành riêng cho Ngân 💖<br>"Tui thật sự rất quý Ngân… nhiều hơn Ngân nghĩ đó."</p>
-    <img src="secret_image.jpg" alt="Bí mật">
-  </div>
 </div>
 
 <!-- PAGE 2 -->
@@ -194,63 +178,77 @@ window.onload = function() {
     Cảm ơn vì sự hiền lành và niềm vui mà Ngân mang lại 🌸<br>
     Chúc Ngân luôn rạng rỡ, thành công và hạnh phúc 💕
   </p>
+
+  <!-- Thanh bí mật cuối page 4 -->
+  <div id="secretBox">🔒 Nhấn để xem bí mật</div>
+  <div id="secretImage">
+    <p style="color:#ff2e9b; font-size:1.1em;">💖 Đây là bí mật dành riêng cho Ngân 💖<br>"Tui thật sự rất quý Ngân… nhiều hơn Ngân nghĩ đó."</p>
+    <a href="https://example.com" target="_blank">
+      <img src="secret_image.jpg" alt="Bí mật">
+    </a>
+  </div>
 </div>
 
 <div class="hearts" id="heart-container"></div>
 
 <script>
-// Slideshow
 let current = 1;
-let slideshowInterval = setInterval(nextSlide, 5000);
+let slideshowInterval;
 
-function nextSlide(){
-  let next = current + 1;
-  if(next > 4) next = 1;
-  nextPage(next);
-}
-
-function nextPage(num){
-  document.getElementById("page"+current).classList.remove("active");
-  document.getElementById("page"+num).classList.add("active");
+// Slideshow function
+function nextPage(num) {
+  document.getElementById("page" + current).classList.remove("active");
+  const next = document.getElementById("page" + num);
+  next.classList.add("active");
   current = num;
 
-  for(let i=0;i<18;i++){
+  // Fireworks
+  for (let i = 0; i < 18; i++) {
     const f = document.createElement('div');
-    f.className='firework';
-    f.style.left=Math.random()*100+'vw';
-    f.style.top=Math.random()*100+'vh';
-    f.style.backgroundColor=`hsl(${Math.random()*360}, 100%, 70%)`;
+    f.className = 'firework';
+    f.style.left = Math.random() * 100 + 'vw';
+    f.style.top = Math.random() * 100 + 'vh';
+    f.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 70%)`;
     document.body.appendChild(f);
-    setTimeout(()=>f.remove(),1000);
+    setTimeout(() => f.remove(), 1000);
   }
 }
 
-// Hearts
-setInterval(()=>{
-  const container=document.getElementById('heart-container');
-  if(container.childElementCount>12) return;
-  const heart=document.createElement('div');
-  heart.classList.add('heart');
-  heart.textContent='💖';
-  heart.style.left=Math.random()*90+'vw';
-  heart.style.fontSize=(16+Math.random()*12)+'px';
-  heart.style.animationDuration=(3+Math.random()*3)+'s';
-  container.appendChild(heart);
-  setTimeout(()=>heart.remove(),6000);
-},800);
+// Tự động chuyển trang mỗi 5 giây
+slideshowInterval = setInterval(() => {
+  let next = current + 1;
+  if (next > 4) next = 1;
+  nextPage(next);
+}, 5000);
 
-// Bí mật
-document.getElementById('secretBox').onclick=function(){
-  let pass=prompt("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
-  if(pass==="20-11-2004"){
-    document.getElementById('secretImage').style.display='block';
+// Hearts animation
+setInterval(() => {
+  const container = document.getElementById('heart-container');
+  if (container.childElementCount > 12) return;
+
+  const heart = document.createElement('div');
+  heart.classList.add('heart');
+  heart.textContent = '💖';
+  heart.style.left = Math.random() * 90 + 'vw';
+  heart.style.fontSize = (16 + Math.random() * 12) + 'px';
+  heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+
+  container.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}, 800);
+
+// Bí mật cuối PAGE 4
+document.getElementById('secretBox').onclick = function() {
+  let pass = prompt("Hãy nhập mật khẩu đi không biết là giận đó🌚🌚🌚");
+  if(pass === "20-11-2004") {
+    document.getElementById('secretImage').style.display = 'block';
     alert("Bí mật mở rồi nè 💖");
     // Dừng slideshow
     clearInterval(slideshowInterval);
   } else {
     alert("Sai mật khẩu rồi nha 🌚");
   }
-}
+};
 </script>
 
 </body>
